tests/fixtures/invalid/array_index_out_of_bounds.c
int main() {
    int values[2];
    values[0] = 1;
    return values[2];
}
